server/kubernetes/chaos-framework-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: chaos-framework-external-service
  namespace: chaos-framework
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30100
  type: NodePort
