server/kubernetes/dispatcher-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dispatcher-deployment
  namespace: chaos-app
  labels:
    app: trrp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dispatcher
  template:
    metadata:
      labels:
        app: dispatcher
    spec:
      containers:
      - name: dispatcher
        image: fleynaro/trrp:dispatcher-v2.2
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: dispatcher-service
  namespace: chaos-app
spec:
  selector:
    app: dispatcher
  ports:
    - port: 50051
      targetPort: 50051
      nodePort: 30163
      name: grpc
  type: NodePort
